--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,59 @@
 /* Your Styles Here */
-body{
+body {
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  background-color: green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel {
+  /* background-color: rebeccapurple; */
+  width: 500px;
+  height: 500px;
+  position: relative;
+}
+
+.controls {
+  /* background-color: firebrick; */
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.controls button {
+  width: 50px;
+  height: 50px;
+  border-radius: 60px;
+  border: none;
+  background-color: white;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  width: 300px;
+  height: 500px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  box-sizing: border-box;
+  position: absolute;
+  box-shadow: 0px 0px 20px -5px black;
+  transition: .2s transform cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
