--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,19 @@ body {
   right: 0;
 }
 
-.controls button {
+#back,
+#forward {
   width: 50px;
   height: 50px;
   border-radius: 60px;
   border: none;
-  background-color: white;
+  background-color: gray;
+}
+
+#flip {
+  position: absolute;
+  bottom: 0;
+  padding: 30px;
 }
 
 .cards {
@@ -50,10 +57,29 @@ body {
   width: 300px;
   height: 500px;
   background-color: white;
-  padding: 20px;
+  /* padding: 20px; */
   border-radius: 20px;
   box-sizing: border-box;
   position: absolute;
   box-shadow: 0px 0px 20px -5px black;
-  transition: .2s transform cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  transition: 0.2s transform cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  transform-style: preserve-3d;
 }
+/* 
+.card:hover {
+  transform: rotateY(180deg);
+} */
+
+.front, .back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
