--- a/styles.css
+++ b/styles.css
@@ -12,26 +12,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* background-image: ; */
 }
 
 .carousel {
   /* background-color: rebeccapurple; */
-  width: 500px;
+  min-width: 500px;
   height: 500px;
   position: relative;
-}
-
-.controls {
-  /* background-color: firebrick; */
-  height: 100%;
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
-  top: 0;
-  right: 0;
 }
+
 
 #back,
 #forward {
@@ -40,17 +33,12 @@ body {
   border-radius: 60px;
   border: none;
   background-color: gray;
-}
-
-#flip {
-  position: absolute;
-  bottom: 0;
-  padding: 30px;
+  z-index: 99;
 }
 
 .cards {
-  display: flex;
-  justify-content: center;
+  width: 300px;
+  height: 500px;
 }
 
 .card {
@@ -81,5 +69,12 @@ body {
 
 .back {
   transform: rotateY(180deg);
+}
+
+.label {
+  position: absolute;
+  top: 500px;
+  text-align: center;
+  width: 100%;
 }
 
