--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
 /* Your Styles Here */
+:root {
+  --bg-color: #B4A569;
+}
+
 body {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: green;
+  background-color: var(--bg-color);
+  user-select: none;
+  color: #012C57;
 }
 
 @keyframes scroll {
@@ -18,7 +24,7 @@ body {
 .container {
   width: 100vw;
   height: 100vh;
-  background-color: green;
+  background-color: var(--bg-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,7 +32,7 @@ body {
   background-repeat: repeat;
   background-size: 100px;
   animation-name: scroll;
-  animation-duration: 5s;
+  animation-duration: 10s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
@@ -43,7 +49,7 @@ body {
 
 #back,
 #forward {
-  width: 50px;
+  width: 100px;
   height: 100%;
   border-radius: 60px;
   border: none;
@@ -52,16 +58,12 @@ body {
   font-weight: bold;
   z-index: 99;
   transition: font-size 0.2s cubic-bezier(0.075, 0.82, 0.165, 1),
-    transform 1.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+    transform 0.2s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
 #back:hover,
 #forward:hover {
   font-size: 30px;
-}
-
-#forward:active {
-  /* transform: translateX(100px); */
 }
 
 .cards {
@@ -94,6 +96,22 @@ body {
 
 .back {
   transform: rotateY(180deg);
+}
+
+.cardback {
+  width: 100%;
+  height: 100%;
+  /* background-color: red; */
+  border-radius: 19px;
+  background-size: cover;
+  position: relative;
+}
+
+.cardback h1 {
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+  color: white;
 }
 
 .label {
